--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome Foodie's</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +48,7 @@
                     <p class="para1" style="font-size: 24px;">All dishes are crafted using natural ingredients so that
                         each dish is absolutely
                         free of artificial flavour, synthetic essence or imitation colour.</p>
-                    <div class="button "> <a href="" class="btn">Read more</a>
+                    <div class="button "> <a href="Login.html" class="btn">Read more</a>
                         <button class="btn">Contact us </button>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
 
                 <p class="para2">Each recipe is our chefs' original creation inspired from their love for freshest local
                     produce, slow cooking and fragrant flavours. </p>
-                <div class="button"> <a href="/Login.html" class="btn">Read more</a>
+                <div class="button"> <a href="Login.html" class="btn">Read more</a>
                     <button class="btn">Contact us </button>
                 </div>
             </div>
@@ -220,7 +220,7 @@
             </a></div>
     </footer>
 
-    <script src="/VJSS FOODIE/myscripts.js"></script>
+    
 
     
 
